--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>サーチツール</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
     </head>
 
@@ -15,7 +17,7 @@
 
                 <!-- Google Search -->
                 <section class="srch-mod srch-mod-google">
-                    <h2 class="srch-mod__title">Google Search</h2>
+                    <h2 class="srch-mod__title"><span>G</span>oogle Search</h2>
                     <div class="srch-mod__actions">
                         <input type="text" name="googlesword" placeholder="キーワードを入力" autocomplete="off" autofocus speech><input type="submit" value="検索" id="googleSearchBtn">
                     </div>
