--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <input type="radio" name="googlesrch" value="d1" id="quick-w1"><label for="quick-w1">1週間以内</label>
                         <input type="radio" name="googlesrch" value="w1" id="quick-m1"><label for="quick-m1">1ヶ月以内</label>
                         <input type="radio" name="googlesrch" value="y1" id="quick-y1"><label for="quick-y1">1年以内</label>
-                        <details open>
+                        <details>
                             <summary>他の検索期間を指定する</summary>
                             <h3 class="srch-mod__choices__title">時間</h3>
                             <div><input type="radio" name="googlesrch" value="h1" id="h1"><label for="h1">1時間以内</label><input type="radio" name="googlesrch" value="h3" id="h3"><label for="h3">3時間以内</label><input type="radio" name="googlesrch" value="h6" id="h6"><label for="h6">6時間以内</label><input type="radio" name="googlesrch" value="h12" id="h12"><label for="h12">12時間以内</label><input type="radio" name="googlesrch" value="h15" id="h15"><label for="h15">15時間以内</label><input type="radio" name="googlesrch" value="h18" id="h18"><label for="h18">18時間以内</label><input type="radio" name="googlesrch" value="h21" id="h21"><label for="h21">21時間以内</label><input type="radio" name="googlesrch" value="h24" id="h24"><label for="h24">24時間以内</label></div>
